third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-nightly/transmute-ref-src-unsized.stderr
error[E0271]: type mismatch resolving `<[u8; 1] as KnownLayout>::PointerMetadata == usize`
  --> tests/ui-nightly/transmute-ref-src-unsized.rs:16:31
   |
16 | const SRC_UNSIZED: &[u8; 1] = transmute_ref!(&[0u8][..]);
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `()`
   |
   = note: required for `Wrap<&[u8], &[u8; 1]>` to implement `TransmuteRefDst<'_>`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
